--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <source src="video\VL01.mp4" type="video/mp4">
         Tu navegador no soporta videos HTML5.
 	</video>
+  	<video autoplay loop muted>
+        <source src="video\VL01.mp4" type="video/mp4">
+        Tu navegador no soporta videos HTML5.
+	</video>
 	<p>.</p>
    <h1>CALI EN FLOR</h1>
    <h2>Flores que conectan corazones en Cali</h2>
