--- a/index.html
+++ b/index.html
@@ -15,12 +15,8 @@
         <source src="video\VL01.mp4" type="video/mp4">
         Tu navegador no soporta videos HTML5.
 	</video>
-  	<video autoplay loop muted>
-        <source src="video\VL01.mp4" type="video/mp4">
-        Tu navegador no soporta videos HTML5.
-	</video>
 	<p>.</p>
-   <h1>CALI EN FLOR</h1>
+   <h1>FLOWER KEYTY CALI</h1>
    <h2>Flores que conectan corazones en Cali</h2>
   </hgroup>
  </header>
@@ -51,13 +47,27 @@
 		<h5 id="DesayunosLateral">DESAYUNOS</h5>
 	</ul>
     <div>
-		<a href="https://wa.me/573015423190?text=Hola,%20quiero%20las%20mejores%20flores%20de%20COLOMBIA" target="_blank" style="text-decoration: none;">
+		<a href="https://wa.me/573176199916?text=Hola,%20quiero%20las%20mejores%20flores%20de%20COLOMBIA" target="_blank" style="text-decoration: none;">
 			<button>
 				<img src="video/whatsapp.gif" width=100% height=100%></img>
 			</button>
 		</a>	
 	</div>
-	<p > + 57 3015423190</P>
+    <div>
+		<a href="https://wa.me/573176199916?text=Hola,%20quiero%20las%20mejores%20flores%20de%20COLOMBIA" target="_blank" style="text-decoration: none;">
+			<p >NUBIA PORTILLA<br> + 57 3176199916</P>
+		</a>	
+	</div>	
+    <div>
+		<a href="https://wa.me/573234902924?text=Hola,%20quiero%20las%20mejores%20flores%20de%20COLOMBIA" target="_blank" style="text-decoration: none;">
+			<p >JOHAN VIVAS<br> + 57 3234902924</P>
+		</a>	
+	</div>		
+    <div>
+		<a href="https://wa.me/573027444029?text=Hola,%20quiero%20las%20mejores%20flores%20de%20COLOMBIA" target="_blank" style="text-decoration: none;">
+			<p >EDWIN VIVAS<br> + 57 3027444029</P>
+		</a>	
+	</div>		
  </aside>
 <section>
 		<h3 id="RamosCentral">RAMOS DE FLORES</h3>
@@ -781,7 +791,17 @@
 </section>
 <footer>
     <p>Copyright 2024</p>
-	<a href="https://wa.me/573015423190?text=Hola,%20quiero%20las%20mejores%20flores%20de%20COLOMBIA" target="_blank" style="text-decoration: none;">
+	<a href="https://wa.me/573176199916?text=Hola,%20quiero%20las%20mejores%20flores%20de%20COLOMBIA" target="_blank" style="text-decoration: none;">
+		<button style="background-color: #25D366">
+			<img src="images\whatsapp.jpg"alt="WhatsApp" width="100" height="100";>
+		</button>
+	</a>
+	<a href="https://wa.me/573234902924?text=Hola,%20quiero%20las%20mejores%20flores%20de%20COLOMBIA" target="_blank" style="text-decoration: none;">
+		<button style="background-color: #25D366">
+			<img src="images\whatsapp.jpg"alt="WhatsApp" width="100" height="100";>
+		</button>
+	</a>
+	<a href="https://wa.me/573027444029?text=Hola,%20quiero%20las%20mejores%20flores%20de%20COLOMBIA" target="_blank" style="text-decoration: none;">
 		<button style="background-color: #25D366">
 			<img src="images\whatsapp.jpg"alt="WhatsApp" width="100" height="100";>
 		</button>
