--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</video>
 	<p>.</p>
    <h1>FLOWER KEYTY CALI</h1>
-   <h2>Flores que conectan corazones en Cali</h2>
+   <h2>Flores que conectan corazones en Cali y sus alrededores</h2>
   </hgroup>
  </header>
  <aside>
